Cleaned up the code.
git-svn-id: file:///cygdrive/m/laurent_svn_repository/photo%20manager/trunk@136 386d4766-1365-6f4e-aa78-025d1aaf1182