@@ -8,7 +8,7 @@ import javax.swing.KeyStroke;
 /**
  * Base class for actions
  * 
- * @author Laurent Mazuré
+ * @author Laurent Mazurï¿½
  */
 public abstract class PhotoManagerAction extends AbstractAction {
 	
@@ -23,7 +23,7 @@ public abstract class PhotoManagerAction extends AbstractAction {
 	                           final KeyStroke accelerator,
 	                           final String tooltipText) {
         super(text);
-		if (mnemonic!=KeyEvent.CHAR_UNDEFINED) putValue(MNEMONIC_KEY, new Integer(mnemonic));
+		if (mnemonic!=KeyEvent.CHAR_UNDEFINED) putValue(MNEMONIC_KEY, Integer.valueOf(mnemonic));
 		if (accelerator!=null) putValue(ACCELERATOR_KEY, accelerator);
 		if (tooltipText!=null) putValue(SHORT_DESCRIPTION, tooltipText);
 	}
